--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "serialize-javascript": "^2.1.2"
   }
 }
